<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="projects.tpokora.com.project_s_android.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/login_form_padding"
        >

        <EditText
            android:id="@+id/login_editText"
            android:hint="@string/login_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginInputBackground"
            android:textColor="@color/loginInputColor"
            android:padding="@dimen/login_form_input_padding"
            android:textColorHint="@color/loginInputHintColor"
            android:textSize="@dimen/login_form_font_size"/>

        <EditText
            android:id="@+id/password_editText"
            android:hint="@string/password_text_field"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_form_input_margin"
            android:padding="@dimen/login_form_input_padding"
            android:background="@color/loginInputBackground"
            android:textColor="@color/loginInputColor"
            android:textColorHint="@color/loginInputHintColor"
            android:textSize="@dimen/login_form_font_size" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:onClick="checkLogin"
            android:layout_marginTop="@dimen/login_form_button_margin_top"
            android:layout_marginBottom="@dimen/login_form_button_margin_bottom"
            android:padding="@dimen/login_form_input_margin"
            android:background="@color/loginInputBackground"
            android:textColor="@color/loginInputColor"
            android:textSize="@dimen/login_form_font_size"/>
    </LinearLayout>



</LinearLayout>
